4B/cs444/tests/a1/fail/Je_1_NonJoosConstructs_incrementanddecrement.java
public class Je_1_NonJoosConstructs_incrementanddecrement {
  public int m(int x) {
    x++; x--; ++x; return --x;

  }
}

